fix: don't have muliple overflows for tables (#2665)

--- a/platform_umbrella/apps/control_server_web/assets/css/petal_components_overrides.css
+++ b/platform_umbrella/apps/control_server_web/assets/css/petal_components_overrides.css
@@ -103,7 +103,7 @@
 /* Table */
 
 .pc-table {
-  @apply min-w-full overflow-hidden rounded-sm table-auto md:overflow-auto ring-0 dark:divide-y-0 dark:divide-gray-800 sm:rounded;
+  @apply min-w-full rounded-sm table-auto ring-0 dark:divide-y-0 dark:divide-gray-800 sm:rounded;
 }
 
 .pc-table__th {
